--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,7 +1,7 @@
 ---
-# defaults file for php
+# default vars for PHP role
 
-php_version: 7.1
+php_version: 7.2
 
 php_packages:
     - "php{{ php_version }}-common"
@@ -18,3 +18,7 @@ php_packages:
     - php-apcu
     - libpcre3-dev
     - "libapache2-mod-php{{ php_version }}"
+
+install_composer: True
+
+use_ppa: False
