--- a/tasks/composer.yml
+++ b/tasks/composer.yml
@@ -1,17 +1,29 @@
 ---
-- name: Download Composer installer.
+- name: PHP | Download Composer installer.
   get_url:
     url: https://getcomposer.org/installer
     dest: /tmp/composer-installer.php
     mode: 0755
 
-- name: Run Composer installer.
+- name: PHP | Run Composer installer.
   command: >
     php composer-installer.php
     chdir=/tmp
     creates=/usr/local/bin/composer
 
-- name: Move Composer into globally-accessible location.
+- name: PHP | Move Composer into globally-accessible location.
   shell: >
     mv /tmp/composer.phar /usr/local/bin/composer
     creates=/usr/local/bin/composer
+
+# - name: PHP | Remove composer from $PATH if it exists
+#   lineinfile:
+#     path: /home/{{ web_server_user }}/.bashrc
+#     regexp: '^export PATH="$PATH:$HOME/.config/composer/vendor/bin"'
+#     state: absent
+
+# - name: PHP | Add composer to $PATH
+#   lineinfile:
+#     path: /home/{{ web_server_user }}/.bashrc
+#     line: 'export PATH="$PATH:$HOME/.config/composer/vendor/bin"'
+#     state: present
