--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,18 +1,17 @@
 ---
-- name: PHP | Add ondrej repository for later versions of PHP
+- name: Add ondrej repository for later versions of PHP
   apt_repository: repo='ppa:ondrej/php' update_cache=yes
   when: use_ppa == True
 
-- name: PHP | Install PHP and dependencies
+- name: Install PHP and dependencies
   apt:
     name: "{{ php_packages }}"
     state: present
 
-- name: PHP | Include composer
+- name: Include composer
   include_tasks: composer.yml
   when: install_composer == True
 
-- name: PHP | Include xdebug
+- name: Include xdebug
   include_tasks: xdebug.yml
   when: install_xdebug == True
-
