--- a/tasks/composer.yml
+++ b/tasks/composer.yml
@@ -1,29 +1,79 @@
 ---
-- name: Download Composer installer.
+- name: Check if Composer is installed
+  stat:
+    path: /usr/local/bin/composer
+  register: composer_installed
+
+- name: Get installed Composer version
+  command: /usr/local/bin/composer --version --no-ansi
+  register: composer_version_output
+  changed_when: false
+  failed_when: false
+  when: composer_installed.stat.exists
+
+- name: Download Composer installer with signature verification
   get_url:
     url: https://getcomposer.org/installer
     dest: /tmp/composer-installer.php
-    mode: 0755
+    mode: '0755'
+    checksum: sha384:55ce33d7678c5a611085589f1f3ddf8b3c52d662cd01d4ba75c0ee0459970c2200a51f492d557530c71c15d8dba01eae
+  when: not composer_installed.stat.exists or composer_keep_updated | bool
 
-- name: Run Composer installer.
-  command: >
-    php composer-installer.php
-    chdir=/tmp
-    creates=/usr/local/bin/composer
+- name: Download Composer installer signature
+  get_url:
+    url: https://composer.github.io/installer.sig
+    dest: /tmp/composer-installer.sig
+    mode: '0644'
+  when: not composer_installed.stat.exists or composer_keep_updated | bool
 
-- name: Move Composer into globally-accessible location.
-  shell: >
-    mv /tmp/composer.phar /usr/local/bin/composer
-    creates=/usr/local/bin/composer
+- name: Verify Composer installer signature
+  shell: |
+    php -r "copy('https://composer.github.io/installer.sig', '/tmp/installer.sig');"
+    php -r "if (hash_file('sha384', '/tmp/composer-installer.php') === file_get_contents('/tmp/installer.sig')) { echo 'Installer verified'; } else { echo 'Installer corrupt'; unlink('/tmp/composer-installer.php'); } echo PHP_EOL;"
+  register: composer_verify
+  changed_when: false
+  when: not composer_installed.stat.exists or composer_keep_updated | bool
 
-# - name: Remove composer from $PATH if it exists
-#   lineinfile:
-#     path: /home/{{ web_server_user }}/.bashrc
-#     regexp: '^export PATH="$PATH:$HOME/.config/composer/vendor/bin"'
-#     state: absent
+- name: Fail if Composer installer verification failed
+  fail:
+    msg: "Composer installer verification failed"
+  when: 
+    - not composer_installed.stat.exists or composer_keep_updated | bool
+    - "'Installer verified' not in composer_verify.stdout"
 
-# - name: Add composer to $PATH
-#   lineinfile:
-#     path: /home/{{ web_server_user }}/.bashrc
-#     line: 'export PATH="$PATH:$HOME/.config/composer/vendor/bin"'
-#     state: present
+- name: Install Composer
+  shell: |
+    php /tmp/composer-installer.php --install-dir=/usr/local/bin --filename=composer --version={{ composer_version }}
+  args:
+    creates: /usr/local/bin/composer
+  when: not composer_installed.stat.exists
+
+- name: Update Composer to latest version
+  shell: /usr/local/bin/composer self-update --{{ composer_version }}
+  when: 
+    - composer_installed.stat.exists
+    - composer_keep_updated | bool
+
+- name: Set Composer permissions
+  file:
+    path: /usr/local/bin/composer
+    mode: '0755'
+    owner: root
+    group: root
+
+- name: Install global Composer packages
+  composer:
+    command: require
+    global_command: true
+    arguments: "{{ item }}"
+  loop: "{{ composer_global_packages }}"
+  when: composer_global_packages | length > 0
+
+- name: Clean up installer files
+  file:
+    path: "{{ item }}"
+    state: absent
+  loop:
+    - /tmp/composer-installer.php
+    - /tmp/composer-installer.sig
+    - /tmp/installer.sig
